--- a/Maze Algorithms Stats.ipynb
+++ b/Maze Algorithms Stats.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,12 +680,12 @@
     "\n",
     "# print_to_file(\"ex. graph2\", 20, \"primitive\", (50, 76), 140)\n",
     "\n",
-    "g1 = Graph(maze)\n",
+    "# g1 = Graph(maze)\n",
     "# path = g1.search_1(True)\n",
     "# g1.print_path(path)\n",
-    "g1.primitive(20, 20)\n",
+    "# g1.primitive(20, 20)\n",
     "# g1.print_graph()\n",
-    "g1.optimize_maze()\n",
+    "# g1.optimize_maze()\n",
     "# g1.print_graph()\n",
     "# path = g1.search_1()\n",
     "# g1.print_path(path)\n",
@@ -721,9 +721,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[True, False, True], [True, False, True], [True, False, True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = [\n",
+    "         [True,False,True],\n",
+    "         [True,False,True],\n",
+    "         [True,False,True]\n",
+    "         ]\n",
+    "print(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-7-272ba87227d3>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-272ba87227d3>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    def sunMove(sun):\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "from graphics import *\n",
+    "windowSize = (600,600)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def drawMaze(graph,win,padding=10):\n",
+    "    mazeWidth = (windowSize[0] - 2*padding) # width of the maze after getting rid of the padding of the full window\n",
+    "    mazeHeight = (windowSize[1] - 2*padding)\n",
+    "    w = mazeWidth / len(graph[0])\n",
+    "    h = mazeHeight / len(graph)\n",
+    "    for y in graph:\n",
+    "        for x in graph[y]:\n",
+    "            xPos = padding + (w*x)\n",
+    "            yPos = padding + (h*y)\n",
+    "            if graph[y][x]:\n",
+    "                drawRect(xPos,yPos,w,h,win)\n",
+    "\n",
+    "def drawRect(x,y,w,h,win):\n",
+    "    r = Rectangle(Point(x,y), Point(x-w, y-h))\n",
+    "    r.setFill(\"black\")\n",
+    "    return r\n",
+    "\n",
+    "def sunMove(sun):\n",
+    "    for part in sun:\n",
+    "        part.move(-2,0)\n",
+    "        \n",
+    "    if sun[3].p1.getX() <= 0:\n",
+    "        for part in sun: #for each loop - use for lists\n",
+    "            part.move(windowSize[0] + 140, 0)\n",
+    "            \n",
+    "def moonMove(sun):\n",
+    "    sun.move(-2,0)\n",
+    "        \n",
+    "    if sun.p1.getX() <= 0:\n",
+    "        for part in sun: #for each loop - use for lists\n",
+    "            part.move(windowSize[0] + 40, 0)\n",
+    "    \n",
+    "def askForSuns():\n",
+    "    ans = input(\"How many suns exist in your sky?\")\n",
+    "    if ans.isdigit():\n",
+    "        return int(ans)\n",
+    "    else:\n",
+    "        print(\"Plase enter a number only.\")\n",
+    "        return askForSuns()\n",
+    "    \n",
+    "def drawPumpkin(x,y,r,win):\n",
+    "    c = Circle(Point(x, y), r)\n",
+    "    c.setFill(\"orange\")\n",
+    "    tw = r/10 # 1/2 trunk width\n",
+    "    r1 = Rectangle(Point(x-tw, y-r-(tw*2)), Point(x+tw, y-r))\n",
+    "    r1.setFill(\"green\")\n",
+    "    r2 = Rectangle(Point(x-(tw/2), y-r-(tw*2)-5), Point(x+(tw/2), y-r-(tw*2)))\n",
+    "    r2.setFill(\"brown\")\n",
+    "    c.draw(win)\n",
+    "    r2.draw(win)\n",
+    "    r1.draw(win)\n",
+    "    return [c,r1,r2]\n",
+    "\n",
+    "def jumpScare(win):\n",
+    "    c = Circle(Point(windowSize[0]/2, windowSize[1]/2), windowSize[0])\n",
+    "    c.setFill(\"black\")\n",
+    "    c1 = Circle(Point(windowSize[0]-50, 50), 40)\n",
+    "    c1.setFill(\"gray\")\n",
+    "    c2 = Circle(Point(50, 50), 40)\n",
+    "    c2.setFill(\"gray\")\n",
+    "    background = Image(Point(300,300),\"Pictures/JumpScare.png\")\n",
+    "    c.draw(win)\n",
+    "    c1.draw(win)\n",
+    "    c2.draw(win)\n",
+    "    background.draw(win)\n",
+    "    return [c1,c2]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    win = GraphWin(\"Ball bouncing\", windowSize[0], windowSize[1], False)\n",
+    "    background = Image(Point(300,300),\"Pictures/Background.png\")\n",
+    "    background.draw(win)\n",
+    "    pumpkin = Image(Point(300,300),\"Pictures/Background.png\")\n",
+    "    \n",
+    "    sky = []\n",
+    "    pumpkins = []\n",
+    "    numberOfSuns = askForSuns()\n",
+    "    for i in range(numberOfSuns):\n",
+    "        sun = drawSun(random.randint(0, 600), random.randint(50, 100), random.randint(20, 40), random.randint(15, 20), win)\n",
+    "        sky.append(sun)\n",
+    "        \n",
+    "    win.getMouse()\n",
+    "    for x in range(500):\n",
+    "        mousePoint = win.checkMouse()\n",
+    "        if mousePoint != None:\n",
+    "            if x%2 == 0:\n",
+    "                pumpkin = Image(mousePoint,\"Pictures/Pumpkin.png\")\n",
+    "                pumpkin.draw(win)\n",
+    "            else:\n",
+    "                pumpkin = drawPumpkin(mousePoint.getX(), mousePoint.getY(), random.randint(20, 40), win)\n",
+    "                pumpkins.append(pumpkin)\n",
+    "    \n",
+    "        for sun in sky:\n",
+    "            sunMove(sun)\n",
+    "        update(30) #sets FPS\n",
+    "    \n",
+    "    sky = jumpScare(win)\n",
+    "    for x in range(100):\n",
+    "        for moon in sky:\n",
+    "            moonMove(moon)\n",
+    "        update(30)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(126.0, 532.0)\n"
+     ]
+    }
+   ],
    "source": [
     "import arcade\n",
     "import numpy as np\n",
@@ -748,7 +909,6 @@
     "#     [\".\", \"#\", \"#\", \"#\", \".\", \"#\", \".\", \"#\", \"#\", \".\", \".\"],\n",
     "#     [\"S\", \"#\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \"#\", \".\"]\n",
     "# ]\n",
-    "\n",
     "\n",
     "\n",
     "class MyGame(arcade.Window):\n",
@@ -998,7 +1158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1013,6 +1173,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7f9b176e99b0b7699e163eb9975710d46148f2747eaa4ceb3869c0d6f92460c"
+   }
   }
  },
  "nbformat": 4,
