--- a/Maze Algorithms Stats.ipynb
+++ b/Maze Algorithms Stats.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,9 +669,9 @@
     "\n",
     "# analize(\"primitive\")\n",
     "\n",
-    "# g1 = Graph(maze)\n",
-    "# g1.primitive(10, 10)\n",
-    "# g1.optimize_maze()\n",
+    "g1 = Graph(maze)\n",
+    "g1.primitive(50, 50)\n",
+    "g1.optimize_maze()\n",
     "# g1.print_graph()\n",
     "# game1 = MazeLevel(g1)\n",
     "# game1.playLevel()\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -743,15 +743,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-7-272ba87227d3>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-272ba87227d3>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    def sunMove(sun):\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
      ]
     }
    ],
@@ -763,12 +762,13 @@
     "\n",
     "\n",
     "def drawMaze(graph,win,padding=10):\n",
+    "    print()\n",
     "    mazeWidth = (windowSize[0] - 2*padding) # width of the maze after getting rid of the padding of the full window\n",
     "    mazeHeight = (windowSize[1] - 2*padding)\n",
     "    w = mazeWidth / len(graph[0])\n",
     "    h = mazeHeight / len(graph)\n",
-    "    for y in graph:\n",
-    "        for x in graph[y]:\n",
+    "    for y in range(len(graph)):\n",
+    "        for x in range(len(graph[y])):\n",
     "            xPos = padding + (w*x)\n",
     "            yPos = padding + (h*y)\n",
     "            if graph[y][x]:\n",
@@ -779,91 +779,77 @@
     "    r.setFill(\"black\")\n",
     "    return r\n",
     "\n",
-    "def sunMove(sun):\n",
-    "    for part in sun:\n",
-    "        part.move(-2,0)\n",
+    "# def sunMove(sun):\n",
+    "#     for part in sun:\n",
+    "#         part.move(-2,0)\n",
     "        \n",
-    "    if sun[3].p1.getX() <= 0:\n",
-    "        for part in sun: #for each loop - use for lists\n",
-    "            part.move(windowSize[0] + 140, 0)\n",
+    "#     if sun[3].p1.getX() <= 0:\n",
+    "#         for part in sun: #for each loop - use for lists\n",
+    "#             part.move(windowSize[0] + 140, 0)\n",
     "            \n",
-    "def moonMove(sun):\n",
-    "    sun.move(-2,0)\n",
+    "# def moonMove(sun):\n",
+    "#     sun.move(-2,0)\n",
     "        \n",
-    "    if sun.p1.getX() <= 0:\n",
-    "        for part in sun: #for each loop - use for lists\n",
-    "            part.move(windowSize[0] + 40, 0)\n",
+    "#     if sun.p1.getX() <= 0:\n",
+    "#         for part in sun: #for each loop - use for lists\n",
+    "#             part.move(windowSize[0] + 40, 0)\n",
     "    \n",
-    "def askForSuns():\n",
-    "    ans = input(\"How many suns exist in your sky?\")\n",
-    "    if ans.isdigit():\n",
-    "        return int(ans)\n",
-    "    else:\n",
-    "        print(\"Plase enter a number only.\")\n",
-    "        return askForSuns()\n",
+    "# def askForSuns():\n",
+    "#     ans = input(\"How many suns exist in your sky?\")\n",
+    "#     if ans.isdigit():\n",
+    "#         return int(ans)\n",
+    "#     else:\n",
+    "#         print(\"Plase enter a number only.\")\n",
+    "#         return askForSuns()\n",
     "    \n",
-    "def drawPumpkin(x,y,r,win):\n",
-    "    c = Circle(Point(x, y), r)\n",
-    "    c.setFill(\"orange\")\n",
-    "    tw = r/10 # 1/2 trunk width\n",
-    "    r1 = Rectangle(Point(x-tw, y-r-(tw*2)), Point(x+tw, y-r))\n",
-    "    r1.setFill(\"green\")\n",
-    "    r2 = Rectangle(Point(x-(tw/2), y-r-(tw*2)-5), Point(x+(tw/2), y-r-(tw*2)))\n",
-    "    r2.setFill(\"brown\")\n",
-    "    c.draw(win)\n",
-    "    r2.draw(win)\n",
-    "    r1.draw(win)\n",
-    "    return [c,r1,r2]\n",
+    "# def drawPumpkin(x,y,r,win):\n",
+    "#     c = Circle(Point(x, y), r)\n",
+    "#     c.setFill(\"orange\")\n",
+    "#     tw = r/10 # 1/2 trunk width\n",
+    "#     r1 = Rectangle(Point(x-tw, y-r-(tw*2)), Point(x+tw, y-r))\n",
+    "#     r1.setFill(\"green\")\n",
+    "#     r2 = Rectangle(Point(x-(tw/2), y-r-(tw*2)-5), Point(x+(tw/2), y-r-(tw*2)))\n",
+    "#     r2.setFill(\"brown\")\n",
+    "#     c.draw(win)\n",
+    "#     r2.draw(win)\n",
+    "#     r1.draw(win)\n",
+    "#     return [c,r1,r2]\n",
     "\n",
-    "def jumpScare(win):\n",
-    "    c = Circle(Point(windowSize[0]/2, windowSize[1]/2), windowSize[0])\n",
-    "    c.setFill(\"black\")\n",
-    "    c1 = Circle(Point(windowSize[0]-50, 50), 40)\n",
-    "    c1.setFill(\"gray\")\n",
-    "    c2 = Circle(Point(50, 50), 40)\n",
-    "    c2.setFill(\"gray\")\n",
-    "    background = Image(Point(300,300),\"Pictures/JumpScare.png\")\n",
-    "    c.draw(win)\n",
-    "    c1.draw(win)\n",
-    "    c2.draw(win)\n",
-    "    background.draw(win)\n",
-    "    return [c1,c2]\n",
+    "# def jumpScare(win):\n",
+    "#     c = Circle(Point(windowSize[0]/2, windowSize[1]/2), windowSize[0])\n",
+    "#     c.setFill(\"black\")\n",
+    "    # c1 = Circle(Point(windowSize[0]-50, 50), 40)\n",
+    "    # c1.setFill(\"gray\")\n",
+    "    # c2 = Circle(Point(50, 50), 40)\n",
+    "    # c2.setFill(\"gray\")\n",
+    "    # background = Image(Point(300,300),\"Pictures/JumpScare.png\")\n",
+    "    # c.draw(win)\n",
+    "    # c1.draw(win)\n",
+    "    # c2.draw(win)\n",
+    "    # background.draw(win)\n",
+    "    # return [c1,c2]\n",
     "\n",
     "\n",
     "\n",
     "def main():\n",
-    "    win = GraphWin(\"Ball bouncing\", windowSize[0], windowSize[1], False)\n",
-    "    background = Image(Point(300,300),\"Pictures/Background.png\")\n",
-    "    background.draw(win)\n",
-    "    pumpkin = Image(Point(300,300),\"Pictures/Background.png\")\n",
+    "    win = GraphWin(\"Maze - Graph Theory\", windowSize[0], windowSize[1], False)\n",
+    "    # background = Image(Point(300,300),\"Pictures/Background.png\")\n",
+    "    # background.draw(win)\n",
+    "    # pumpkin = Image(Point(300,300),\"Pictures/Background.png\")\n",
     "    \n",
-    "    sky = []\n",
-    "    pumpkins = []\n",
-    "    numberOfSuns = askForSuns()\n",
-    "    for i in range(numberOfSuns):\n",
-    "        sun = drawSun(random.randint(0, 600), random.randint(50, 100), random.randint(20, 40), random.randint(15, 20), win)\n",
-    "        sky.append(sun)\n",
+    "    # sky = []\n",
+    "    # pumpkins = []\n",
+    "    # numberOfSuns = askForSuns()\n",
+    "    # for i in range(numberOfSuns):\n",
+    "    #     sun = drawSun(random.randint(0, 600), random.randint(50, 100), random.randint(20, 40), random.randint(15, 20), win)\n",
+    "    #     sky.append(sun)\n",
     "        \n",
     "    win.getMouse()\n",
-    "    for x in range(500):\n",
-    "        mousePoint = win.checkMouse()\n",
-    "        if mousePoint != None:\n",
-    "            if x%2 == 0:\n",
-    "                pumpkin = Image(mousePoint,\"Pictures/Pumpkin.png\")\n",
-    "                pumpkin.draw(win)\n",
-    "            else:\n",
-    "                pumpkin = drawPumpkin(mousePoint.getX(), mousePoint.getY(), random.randint(20, 40), win)\n",
-    "                pumpkins.append(pumpkin)\n",
-    "    \n",
-    "        for sun in sky:\n",
-    "            sunMove(sun)\n",
-    "        update(30) #sets FPS\n",
-    "    \n",
-    "    sky = jumpScare(win)\n",
-    "    for x in range(100):\n",
-    "        for moon in sky:\n",
-    "            moonMove(moon)\n",
-    "        update(30)\n",
+    "    print(\"hello\")\n",
+    "    drawMaze(graph,win)\n",
+    "    win.getMouse()\n",
+    "    # for x in range(500):\n",
+    "    #     update(30)\n",
     "\n",
     "\n",
     "\n",
@@ -874,17 +860,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(126.0, 532.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arcade\n",
     "import numpy as np\n",
