--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -9,60 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|\n",
-      "|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|.|.|#|.|.|\n",
-      "|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|\n",
-      "|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|\n",
-      "|#|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|\n",
-      "|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|.|\n",
-      "|.|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|#|#|\n",
-      "|.|#|.|#|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|\n",
-      "|#|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|\n",
-      "|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|\n",
-      "|.|#|#|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|.|#|\n",
-      "|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|#|.|.|\n",
-      "|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|\n",
-      "|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|.|\n",
-      "|.|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|.|#|#|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|\n",
-      "|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|\n",
-      "|.|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|\n",
-      "|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|F|\n",
-      "|#|#|.|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|.|#|#|#|\n",
-      "|.|.|S|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|\n",
-      "|#|#|.|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|\n",
-      "|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|.|\n",
-      "|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|.|#|\n",
-      "|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|\n",
-      "|#|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|\n",
-      "|.|.|.|#|.|#|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|.|\n",
-      "|.|#|.|#|.|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|\n",
-      "|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|\n",
-      "|#|#|#|#|.|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|\n",
-      "|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|.|\n",
+      "|.|#|.|#|.|.|S|.|.|.|\n",
+      "|.|#|.|#|#|#|.|#|#|#|\n",
+      "|.|.|.|#|F|.|.|.|.|.|\n",
+      "|#|#|.|#|.|#|.|#|#|#|\n",
+      "|.|.|.|.|.|#|.|.|.|.|\n",
       "\n",
-      "Setup done\n"
-     ]
-    },
-    {
-     "ename": "Terminator",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTerminator\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-7e2a614c0493>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    734\u001b[0m \u001b[0mg1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_graph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    735\u001b[0m \u001b[0mgame1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMazeLevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 736\u001b[1;33m \u001b[0mgame1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayLevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    737\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    738\u001b[0m \u001b[1;31m# Tell It What To Do\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-7e2a614c0493>\u001b[0m in \u001b[0;36mplayLevel\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    642\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Total Steps: {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msteps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    643\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 644\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwindow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    645\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwindow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    646\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\turtle.py\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1301\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_tracing\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1302\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mturtles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1303\u001b[1;33m             \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_update_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1304\u001b[0m             \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_drawturtle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1305\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_tracing\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtracing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\turtle.py\u001b[0m in \u001b[0;36m_update_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2644\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2645\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_update_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2646\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscreen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_incrementudc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2647\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscreen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_updatecounter\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2648\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\turtle.py\u001b[0m in \u001b[0;36m_incrementudc\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1290\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mTurtleScreen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_RUNNING\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1291\u001b[0m             \u001b[0mTurtleScreen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_RUNNING\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1292\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mTerminator\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1293\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_tracing\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1294\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_updatecounter\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTerminator\u001b[0m: "
+      "[0, 1, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 0, 1, 1, 1, 0, 1, 1, 1]\n",
+      "[0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 1, 0, 1, 0, 1, 0, 1, 1, 1]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -588,8 +552,16 @@
     "#     def stats():\n",
     "        \n",
     "\n",
-    "        \n",
-    "    \n",
+    "def printFile(filename, arr):\n",
+    "    file = open(filename,\"w+\")\n",
+    "    for row in arr:\n",
+    "        row = []\n",
+    "        for spot in row:\n",
+    "            row.append(arr[])\n",
+    "                    \n",
+    "        row = \"\".join(map(str, row))\n",
+    "        file.write(str(row) + \"\\n\")  \n",
+    "    file.write(\"\\n\\n\")\n",
     "        \n",
     "\n",
     "def print_to_file(filename, num = 1, graph_type = \"make_room_maze\", size = (35, 35), minimum = 0):\n",
@@ -812,10 +784,26 @@
     "            player_sizer = self.sprite_sizer[0]\n",
     "            \n",
     "            \n",
+    "def dictToArr(dict,w,h):\n",
+    "    arr = []\n",
+    "    for y in range(h):\n",
+    "        row = []\n",
+    "        for x in range(w):\n",
+    "            val = dict[x, y]\n",
+    "            if val == \"#\":\n",
+    "                row.append(1)\n",
+    "            else:\n",
+    "                row.append(0)\n",
+    "        arr.append(row)\n",
+    "    return arr\n",
+    "            \n",
     "g1 = graph(maze)\n",
-    "g1.primitive(74, 30)\n",
-    "g1.optimize_maze()\n",
+    "g1.primitive(10, 5)\n",
+    "# g1.optimize_maze()\n",
     "g1.print_graph()\n",
+    "arr = dictToArr(g1.stats,10,5)\n",
+    "for row in arr:\n",
+    "    print(row)\n",
     "# game1 = MazeLevel(g1)\n",
     "# game1.playLevel()\n",
     "\n",
@@ -996,7 +984,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1011,6 +999,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7f9b176e99b0b7699e163eb9975710d46148f2747eaa4ceb3869c0d6f92460c"
+   }
   }
  },
  "nbformat": 4,
