--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -9,24 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|.|#|.|#|.|.|S|.|.|.|\n",
-      "|.|#|.|#|#|#|.|#|#|#|\n",
-      "|.|.|.|#|F|.|.|.|.|.|\n",
-      "|#|#|.|#|.|#|.|#|#|#|\n",
-      "|.|.|.|.|.|#|.|.|.|.|\n",
+      "|.|.|#|.|#|.|#|.|.|.|\n",
+      "|#|.|#|.|#|.|#|.|#|.|\n",
+      "|.|.|.|.|.|S|.|.|#|.|\n",
+      "|#|#|#|.|#|.|#|.|#|#|\n",
+      "|.|.|.|.|#|.|#|.|.|.|\n",
       "\n",
-      "[0, 1, 0, 1, 0, 0, 0, 0, 0, 0]\n",
-      "[0, 1, 0, 1, 1, 1, 0, 1, 1, 1]\n",
-      "[0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
-      "[1, 1, 0, 1, 0, 1, 0, 1, 1, 1]\n",
-      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n"
+      "[0, 0, 1, 0, 1, 0, 1, 0, 0, 0]\n",
+      "[1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 0, 1, 1]\n",
+      "[0, 0, 0, 0, 1, 0, 1, 0, 0, 0]\n"
      ]
     }
    ],
@@ -552,16 +552,23 @@
     "#     def stats():\n",
     "        \n",
     "\n",
-    "def printFile(filename, arr):\n",
+    "def printFile(arr, filename):\n",
     "    file = open(filename,\"w+\")\n",
     "    for row in arr:\n",
-    "        row = []\n",
+    "        row = \"\"\n",
     "        for spot in row:\n",
-    "            row.append(arr[])\n",
+    "            row += str(spot) + \",\"\n",
     "                    \n",
-    "        row = \"\".join(map(str, row))\n",
+    "        # row = \"\".join(map(str, row))\n",
     "        file.write(str(row) + \"\\n\")  \n",
     "    file.write(\"\\n\\n\")\n",
+    "    \n",
+    "# def printFile(arr, filename):\n",
+    "#     with open('filename.txt', 'w') as f:\n",
+    "#         sys.stdout = f # Change the standard output to the file we created.\n",
+    "#         print('This message will be written to a file.')\n",
+    "#         sys.stdout = original_stdout # Reset the standard output to its original value\n",
+    "    \n",
     "        \n",
     "\n",
     "def print_to_file(filename, num = 1, graph_type = \"make_room_maze\", size = (35, 35), minimum = 0):\n",
@@ -802,6 +809,7 @@
     "# g1.optimize_maze()\n",
     "g1.print_graph()\n",
     "arr = dictToArr(g1.stats,10,5)\n",
+    "printFile(arr, \"Room Game\")\n",
     "for row in arr:\n",
     "    print(row)\n",
     "# game1 = MazeLevel(g1)\n",
@@ -827,7 +835,7 @@
     "# g2.print_graph()\n",
     "# path = g2.search_1()\n",
     "# g2.print_path(path)\n",
-    "# print_to_file(\"ex. graph1\", 30, \"make_room_maze\", (50, 75))\n",
+    "# print_to_file(\"Room Game\", 30, \"make_room_maze\", (4, 7))\n",
     "\n",
     "# g3 = graph(maze)\n",
     "# g3.make_random_maze(35, 35)\n",
@@ -848,12 +856,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 9] Bad file descriptor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-2e142497e055>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Room Game'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Hi'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Hello from AskPython'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor"
+     ]
+    }
+   ],
    "source": [
-    "print(-(200) / 2)\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
