--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -809,9 +809,6 @@
     "# g1.optimize_maze()\n",
     "g1.print_graph()\n",
     "arr = dictToArr(g1.stats,10,5)\n",
-    "printFile(arr, \"Room Game\")\n",
-    "for row in arr:\n",
-    "    print(row)\n",
     "# game1 = MazeLevel(g1)\n",
     "# game1.playLevel()\n",
     "\n",
@@ -846,36 +843,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1, 21\n",
-    "(-105.0, -165.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 9] Bad file descriptor",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-2e142497e055>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Room Game'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Hi'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Hello from AskPython'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 0, 1, 0, 1, 0, 0, 0]\n",
+      "[1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "[1, 1, 1, 0, 1, 0, 1, 0, 1, 1]\n",
+      "[0, 0, 0, 0, 1, 0, 1, 0, 0, 0]\n",
+      "0,0,1,0,1,0,1,0,0,0\n",
+      "1,0,1,0,1,0,1,0,1,0\n",
+      "0,0,0,0,0,0,0,0,1,0\n",
+      "1,1,1,0,1,0,1,0,1,1\n",
+      "0,0,0,0,1,0,1,0,0,0\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "for row in arr:\n",
+    "    print(row)\n",
+    "\n",
+    "def printFile(arr, filename):\n",
+    "    file = open(filename,\"w+\")\n",
+    "    for row in arr:\n",
+    "        rowStr = \"\"\n",
+    "        for spot in row[:-1]:\n",
+    "            rowStr += str(spot) + \",\"\n",
+    "        rowStr += str(row[len(row)-1])\n",
+    "        file.write(rowStr + \"\\n\") \n",
+    "        print(rowStr) \n",
+    "    file.write(\"\\n\\n\")\n",
+    "    # file.close()\n",
+    "    \n",
+    "# def printFile(arr, filename):\n",
+    "#     with open('filename.txt', 'w') as f:\n",
+    "#         sys.stdout = f # Change the standard output to the file we created.\n",
+    "#         print('This message will be written to a file.')\n",
+    "#         sys.stdout = original_stdout # Reset the standard output to its original value\n",
+    "    \n",
+    "printFile(arr, \"RoombaMap.txt\")"
    ]
   },
   {
