--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -861,6 +861,21 @@
       "1,1,1,0,1,0,1,0,1,1\n",
       "0,0,0,0,1,0,1,0,0,0\n"
      ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 9] Bad file descriptor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-9c457d3039c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m#         sys.stdout = original_stdout # Reset the standard output to its original value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprintFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"RoombaMap.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-41-9c457d3039c9>\u001b[0m in \u001b[0;36mprintFile\u001b[1;34m(arr, filename)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowStr\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowStr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# for testing purposes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[1;31m# file.close()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor"
+     ]
     }
    ],
    "source": [
@@ -868,15 +883,15 @@
     "    print(row)\n",
     "\n",
     "def printFile(arr, filename):\n",
-    "    file = open(filename,\"w+\")\n",
-    "    for row in arr:\n",
-    "        rowStr = \"\"\n",
-    "        for spot in row[:-1]:\n",
-    "            rowStr += str(spot) + \",\"\n",
-    "        rowStr += str(row[len(row)-1])\n",
-    "        file.write(rowStr + \"\\n\") \n",
-    "        print(rowStr) \n",
-    "    file.write(\"\\n\\n\")\n",
+    "    with open(filename,\"w+\") as file:\n",
+    "        for row in arr:\n",
+    "            rowStr = \"\"\n",
+    "            for spot in row[:-1]:\n",
+    "                rowStr += str(spot) + \",\"\n",
+    "            rowStr += str(row[len(row)-1])\n",
+    "            file.write(rowStr + \"\\n\") \n",
+    "            print(rowStr) # for testing purposes \n",
+    "        file.write(\"\\n\\n\")\n",
     "    # file.close()\n",
     "    \n",
     "# def printFile(arr, filename):\n",
