--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -9,27 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|.|.|#|.|#|.|#|.|.|.|\n",
-      "|#|.|#|.|#|.|#|.|#|.|\n",
-      "|.|.|.|.|.|S|.|.|#|.|\n",
-      "|#|#|#|.|#|.|#|.|#|#|\n",
-      "|.|.|.|.|#|.|#|.|.|.|\n",
-      "\n",
-      "[0, 0, 1, 0, 1, 0, 1, 0, 0, 0]\n",
-      "[1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
-      "[1, 1, 1, 0, 1, 0, 1, 0, 1, 1]\n",
-      "[0, 0, 0, 0, 1, 0, 1, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "maze = [\n",
     "    [\".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\"],\n",
@@ -843,41 +825,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 1, 0, 1, 0, 1, 0, 0, 0]\n",
-      "[1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
-      "[1, 1, 1, 0, 1, 0, 1, 0, 1, 1]\n",
-      "[0, 0, 0, 0, 1, 0, 1, 0, 0, 0]\n",
-      "0,0,1,0,1,0,1,0,0,0\n",
-      "1,0,1,0,1,0,1,0,1,0\n",
-      "0,0,0,0,0,0,0,0,1,0\n",
-      "1,1,1,0,1,0,1,0,1,1\n",
-      "0,0,0,0,1,0,1,0,0,0\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 9] Bad file descriptor",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-9c457d3039c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m#         sys.stdout = original_stdout # Reset the standard output to its original value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mprintFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"RoombaMap.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-41-9c457d3039c9>\u001b[0m in \u001b[0;36mprintFile\u001b[1;34m(arr, filename)\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowStr\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowStr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# for testing purposes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m         \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m     \u001b[1;31m# file.close()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in arr:\n",
     "    print(row)\n",
@@ -905,21 +855,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "print(\"hello\")"
+   ]
   },
   {
    "cell_type": "code",
