--- a/Maze Game - Genetic Algorithm.ipynb
+++ b/Maze Game - Genetic Algorithm.ipynb
@@ -250,15 +250,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"h\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -273,6 +283,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7f9b176e99b0b7699e163eb9975710d46148f2747eaa4ceb3869c0d6f92460c"
+   }
   }
  },
  "nbformat": 4,
