--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -9,18 +9,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|.|.|.|#|F|#|.|#|.|.|\n",
-      "|#|#|.|#|.|#|.|#|.|#|\n",
-      "|.|.|S|.|.|.|.|.|.|.|\n",
-      "|#|#|.|#|#|#|.|#|#|#|\n",
-      "|.|.|.|.|.|#|.|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|S|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|\n",
+      "|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|.|\n",
+      "|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|\n",
+      "|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|\n",
+      "|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|#|\n",
+      "|.|.|.|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|\n",
+      "|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|#|#|.|#|.|\n",
+      "|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|.|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|#|\n",
+      "|.|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|\n",
+      "|#|#|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|.|\n",
+      "|.|.|.|.|#|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|\n",
+      "|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|.|#|#|\n",
+      "|.|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|\n",
+      "|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|.|#|.|#|#|#|.|#|.|\n",
+      "|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|\n",
+      "|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|.|\n",
+      "|.|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|\n",
+      "|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|\n",
+      "|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|\n",
+      "|#|#|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|.|\n",
+      "|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|#|.|\n",
+      "|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|.|#|#|#|.|\n",
+      "|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|\n",
+      "|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|\n",
+      "|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|\n",
+      "|#|.|#|#|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|.|#|#|\n",
+      "|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|.|.|\n",
+      "|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|\n",
+      "|.|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|\n",
+      "|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|.|\n",
+      "|.|.|.|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|.|F|\n",
+      "|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|#|\n",
+      "|.|.|#|.|.|.|#|.|.|.|.|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|\n",
+      "|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|#|\n",
+      "|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|\n",
+      "|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|\n",
       "\n"
      ]
     }
@@ -800,10 +835,12 @@
     "    return arr\n",
     "            \n",
     "g1 = graph(maze)\n",
-    "g1.primitive(10, 5)\n",
+    "w = 40\n",
+    "h = 40\n",
+    "g1.primitive(w, h)\n",
     "# g1.optimize_maze()\n",
     "g1.print_graph()\n",
-    "arr = dictToArr(g1.stats,10,5)\n",
+    "arr = dictToArr(g1.stats,w,h)\n",
     "# game1 = MazeLevel(g1)\n",
     "# game1.playLevel()\n",
     "\n",
@@ -834,6 +871,66 @@
     "# g3.optimize_maze()\n",
     "# path = g3.search_1()\n",
     "# g3.print_path(path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,\n",
+      "1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,\n",
+      "0,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,0,0,0,\n",
+      "1,0,1,0,1,1,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,\n",
+      "0,0,1,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,\n",
+      "1,1,1,0,1,0,1,1,1,0,1,1,1,1,1,1,1,0,1,0,1,0,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,0,1,\n",
+      "0,0,0,0,1,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,1,0,1,\n",
+      "1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,0,1,0,1,0,1,1,1,1,1,0,1,\n",
+      "0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,1,0,0,\n",
+      "1,1,1,0,1,0,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,\n",
+      "0,0,0,0,1,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,0,\n",
+      "1,1,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,0,1,1,1,0,1,\n",
+      "0,0,0,0,1,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,\n",
+      "1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,1,1,1,1,1,1,0,1,0,1,0,1,\n",
+      "0,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,\n",
+      "1,1,1,0,1,1,1,1,1,0,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,\n",
+      "0,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,0,\n",
+      "1,1,1,0,1,1,1,0,1,0,1,0,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,0,1,1,1,0,1,0,1,1,1,0,1,\n",
+      "0,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,\n",
+      "1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,1,1,1,1,0,1,1,1,\n",
+      "0,0,0,0,1,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,1,\n",
+      "1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,0,1,1,1,1,1,1,1,0,1,0,1,\n",
+      "0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,\n",
+      "1,1,1,1,1,0,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,1,1,\n",
+      "0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,1,\n",
+      "1,0,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,1,1,0,1,1,1,\n",
+      "0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,0,0,0,0,0,0,0,0,0,0,1,\n",
+      "1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,\n",
+      "0,0,1,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,\n",
+      "1,0,1,1,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,1,1,0,1,\n",
+      "0,0,1,0,0,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,0,\n",
+      "1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,1,1,0,1,\n",
+      "0,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,1,\n",
+      "1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,\n",
+      "0,0,0,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,1,0,0,\n",
+      "1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,\n",
+      "0,0,1,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,0,\n",
+      "1,1,1,0,1,0,1,0,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,1,1,0,1,\n",
+      "0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,\n",
+      "1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in arr:\n",
+    "    rowStr = \"\"\n",
+    "    for spot in row[:-1]:\n",
+    "        rowStr += str(spot) + \",\"\n",
+    "    print(rowStr)"
    ]
   },
   {
